--- a/login.html
+++ b/login.html
@@ -140,7 +140,7 @@
                     showConfirmButton: false,
                     timer: 1500
                 }).then(() => {
-                    window.location.href = 'akun.html'; // Arahkan ke halaman lain
+                    window.location.href = 'index.html'; // Arahkan ke halaman lain
                 });
             } else {
                 Swal.fire({
