--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
         
       <div class="flex">
-        <div class="container" onclick="window.location.href='hilpAi.html'">Ask to Hilp Ai</div>
+        <div class="container" onclick="window.location.href='HilpAi.html'">Ask to Hilp Ai</div>
         <div class="container" onclick="window.location.href='texttoImage.html'">Text To Image</div>
       </div>
     </section>
